--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"bootstrap": "^5.2.3",
 		"classnames": "^2.3.2",
 		"normalize.css": "^8.0.1",
-		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.7.2",
 		"react-confetti": "^6.1.0",
@@ -40,5 +39,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"prop-types": "^15.8.1"
 	}
 }
