--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"react-confetti": "^6.1.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
-		"react-scripts": "5.0.1"
+		"react-scripts": "5.0.1",
+		"sass": "^1.58.3",
+		"styled-components": "^5.3.8"
 	},
 	"scripts": {
 		"start": "react-scripts start",
