--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^1.3.4",
 		"bootstrap": "^5.2.3",
 		"classnames": "^2.3.2",
+		"dotenv": "^16.0.3",
 		"nanoid": "^4.0.1",
 		"normalize.css": "^8.0.1",
 		"prop-types": "^15.8.1",
@@ -15,6 +17,7 @@
 		"react-bootstrap": "^2.7.2",
 		"react-confetti": "^6.1.0",
 		"react-dom": "^18.2.0",
+		"react-dotenv": "^0.1.3",
 		"react-icons": "^4.7.1",
 		"react-scripts": "5.0.1",
 		"styled-components": "^5.3.8"
