--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-dom": "^18.2.0",
 		"react-dotenv": "^0.1.3",
 		"react-icons": "^4.7.1",
+		"react-loader-spinner": "^5.3.4",
 		"react-scripts": "5.0.1",
 		"styled-components": "^5.3.8"
 	},
