--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-icons": "^4.7.1",
 		"react-loader-spinner": "^5.3.4",
 		"react-scripts": "5.0.1",
+		"react-toastify": "^9.1.1",
 		"styled-components": "^5.3.8"
 	},
 	"scripts": {
