--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-dom": "^18.2.0",
 		"react-dotenv": "^0.1.3",
 		"react-icons": "^4.7.1",
+		"react-intersection-observer": "^9.4.3",
 		"react-loader-spinner": "^5.3.4",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.1",
