--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"react-icons": "^4.7.1",
 		"react-intersection-observer": "^9.4.3",
 		"react-loader-spinner": "^5.3.4",
+		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.1",
+		"redux": "^4.2.1",
 		"styled-components": "^5.3.8"
 	},
 	"scripts": {
