--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"axios": "^1.3.4",
 		"bootstrap": "^5.2.3",
 		"classnames": "^2.3.2",
+		"concurrently": "^7.6.0",
 		"dotenv": "^16.0.3",
+		"json-server": "^0.17.3",
 		"nanoid": "^4.0.1",
 		"normalize.css": "^8.0.1",
 		"prop-types": "^15.8.1",
@@ -29,7 +31,9 @@
 		"styled-components": "^5.3.8"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"server": "json-server --watch -p 3002 db.json",
+		"dev": "react-scripts start",
+		"start": "concurrently \"npm run dev\" \"npm run server\"",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
