--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.1",
 		"redux": "^4.2.1",
+		"redux-persist": "^6.0.0",
 		"styled-components": "^5.3.8"
 	},
 	"scripts": {
