--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
 		"styled-components": "^5.3.8"
 	},
 	"scripts": {
-		"server": "json-server --watch -p 3002 db.json",
 		"dev": "react-scripts start",
-		"start": "concurrently \"npm run dev\" \"npm run server\"",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
