--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -22,8 +23,10 @@
 		"react-intersection-observer": "^9.4.3",
 		"react-loader-spinner": "^5.3.4",
 		"react-preloaders": "^3.0.3",
+		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.1",
+		"redux-persist": "^6.0.0",
 		"styled-components": "^5.3.8"
 	},
 	"scripts": {
